syntax = "proto3";
option go_package = "./api";

message Coordinate {
  int32 x = 1;
  int32 y = 2;
}

message Route {
  repeated Coordinate coordinates = 1;
}

message RouteResponse {
  string message = 1;
}

message CarInfo {
  string identifier = 1;
  Coordinate position = 2;
  Route route = 3;
  bool active_route = 4;
  string color = 5;
}

message CarInfoResponse {
  string message = 1;
}

message DiscoverRequest {
    string identifier = 1;
}

message DiscoverResponse {
    repeated CarInfo peers = 1;
}

service CarClientService {
  rpc SendRoute (Route) returns (RouteResponse);
  rpc DiscoverPeers(DiscoverRequest) returns (DiscoverResponse);
}

service CoordinatorService {
  rpc SendCarInfo(CarInfo) returns (CarInfoResponse);
}